--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
     <title>Webpack Demo</title>
   </head>
   <body class="container">
+    <!-- TESTING -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
       <button
@@ -19,6 +20,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
